# compiler

./: .gitignore  CMakeLists.txt  PROJECT_CONTEXT.md  README.md
include/: ast.h  codegen.h  lexer.h  parser.h  semantic.h
src/: ast.c  codegen.c  lexer.c  main.c  parser.c  semantic.c
tests/: factorial.nv
